TimeAdministrator/cluster/timedesk-svc/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: LogTiempo-svc
  namespace: adtd
  labels:
    svc: LogTiempo
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    svc: LogTiempo
